Update about.html footer to include copyright

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -25,3 +25,7 @@
       </section>
     </article>
   </main>
+  
+  <footer>
+    <p>Copyright © 2024 TechCon. All rights reserved.</p>
+  </footer>
