--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,16 +1,38 @@
-<main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About TechCon 2024</title>
+</head>
+<body>
+
+  <header>
+    <h1>About TechCon 2024</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
     <article>
       <h2>History</h2>
       <p>Text about TechCon history...</p>
       <img src="images/history.jpg" alt="Historical photo from TechCon event">
     </article>
-  
+
     <article>
       <h2>Mission</h2>
       <p>Text about TechCon mission...</p>
       <img src="images/mission-icon.png" alt="Icon representing mission">
     </article>
-  
+
     <article>
       <h2>Past Speakers</h2>
       <section>
@@ -25,7 +47,10 @@
       </section>
     </article>
   </main>
-  
+
   <footer>
-    <p>Copyright © 2024 TechCon. All rights reserved.</p>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
   </footer>
+
+</body>
+</html>
